--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_quill: ^10.8.5
+  image_picker: ^1.1.2
   provider: ^6.1.2
 
 dev_dependencies:
